nova aba link externos

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
     <header>
         <h1><span class="titulo">C</span>ORDEL <span class="titulo">M</span>ODERNO</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" >Milton Duarte</a></p>
     </header>
     <main>
         <div id="p1">
@@ -181,7 +181,7 @@
         </div>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/marcosvazbr">MARCOS VAZ</a></p>
+        <p>Site criado por <a href="https://github.com/marcosvazbr" target="_blank" >MARCOS VAZ</a></p>
     </footer>
     
 </body>
