--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             width: 50%;
             font-size: 3.5vw;
             line-height: 2em;
-            background-color: rgba(0, 0, 0, 0.507);
+            background-color: rgba(0, 0, 0, 0.550);
             padding: 10px;
         }
     
@@ -81,7 +81,9 @@
 
         }
         .fundo {
-            padding: 35px 60px 35px 30px;
+            padding: 65px 35px 65px 40px;
+            width: 87%;
+            height: 90%;
 
         }
 
